Add customer section

--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,42 @@
         </article>
       </div>
     </section>
+    <section id='customer'>
+      <div class='content'>
+        <header>
+          <h2>This is what our customers say</h2>
+        </header>
+        <article>
+          <img src='images/avatar1.jpg'>
+          <h4>
+            Quincy Davies
+            <h5>
+              Lorem ipsum
+            </h5>
+          </h4>
+          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.</p>
+        </article>
+        <article>
+          <img src='images/avatar2.jpg'>
+          <h4>
+            Hilde Akdemir
+            <h5>
+              Lorem ipsum
+            </h5>
+          </h4>
+          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.</p>
+        </article>
+        <article>
+          <img src='images/avatar3.jpg'>
+          <h4>
+            Neo Tromp
+            <h5>
+              Lorem ipsum
+            </h5>
+          </h4>
+          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.</p>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
