feature(second-session): refactor html structure

--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,18 @@
   </head>
   <body>
     <section id='header'>
-      <article>
-        <header>
-          <h1>Welcome to my latest experiment</h1>
-        </header>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        <button>Try Now</button>
-      </article>
+      <div class='container'>
+        <article>
+          <header>
+            <h1>Welcome to my latest experiment</h1>
+          </header>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+          <button>Try Now</button>
+        </article>
+      </div>
     </section>
-    <section id='info'>
-      <div class='content'>
+    <section class='wrap' id='features'>
+      <div class='container'>
         <header>
           <h2>Have a look at our features</h2>
         </header>
@@ -30,40 +32,46 @@
         </article>
       </div>
     </section>
-    <section id='customer'>
-      <div class='content'>
+    <section class='wrap' id='testimonials'>
+      <div class='container'>
         <header>
           <h2>This is what our customers say</h2>
         </header>
         <article>
-          <img src='images/avatar1.jpg'>
-          <h4>
-            Quincy Davies
-            <h5>
-              Lorem ipsum
-            </h5>
-          </h4>
-          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.</p>
+          <div class='container'>
+            <img src='images/avatar1.jpg'>
+            <h4>
+              Quincy Davies
+              <h5>
+                Lorem ipsum
+              </h5>
+            </h4>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.</p>
+          </div>
         </article>
         <article>
-          <img src='images/avatar2.jpg'>
-          <h4>
-            Hilde Akdemir
-            <h5>
-              Lorem ipsum
-            </h5>
-          </h4>
-          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.</p>
+          <div class='container'>
+            <img src='images/avatar2.jpg'>
+            <h4>
+              Hilde Akdemir
+              <h5>
+                Lorem ipsum
+              </h5>
+            </h4>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.</p>
+          </div>
         </article>
         <article>
-          <img src='images/avatar3.jpg'>
-          <h4>
-            Neo Tromp
-            <h5>
-              Lorem ipsum
-            </h5>
-          </h4>
-          <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.</p>
+          <div class='container'>
+            <img src='images/avatar3.jpg'>
+            <h4>
+              Neo Tromp
+              <h5>
+                Lorem ipsum
+              </h5>
+            </h4>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.</p>
+          </div>
         </article>
       </div>
     </section>
