feature(second-session): add html structure for products section

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,58 @@
         </article>
       </div>
     </section>
+    <section class='wrap' id='products'>
+      <div class='container'>
+        <header>
+          <h2>Our products are awesome!</h2>
+        </header>
+        <article>
+          <div class='container'>
+            <img src='images/product1-white.png'>
+            <h4>
+              Heading
+            </h4>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut</p>
+          </div>
+        </article>
+        <article>
+          <div class='container'>
+            <img src='images/product2-white.png'>
+            <h4>
+              Heading
+            </h4>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut</p>
+          </div>
+        </article>
+        <article>
+          <div class='container'>
+            <img src='images/product3-white.png'>
+            <h4>
+              Heading
+            </h4>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut</p>
+          </div>
+        </article>
+        <article>
+          <div class='container'>
+            <img src='images/product4-white.png'>
+            <h4>
+              Heading
+            </h4>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut</p>
+          </div>
+        </article>
+        <article>
+          <div class='container'>
+            <img src='images/product5-white.png'>
+            <h4>
+              Heading
+            </h4>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut</p>
+          </div>
+        </article>
+      </div>
+    </section>
     <section class='wrap' id='testimonials'>
       <div class='container'>
         <header>
